# models/inventoryModel.js
@@ -1,8 +1,10 @@
 const mongoose = require('mongoose');
+
 const Schema = mongoose.Schema;
 
 const InventorySchema = new Schema(
   {
+    type: { type: String },
     name: {
       type: String,
       required: 'Kindly enter the Name'
@@ -11,8 +13,17 @@ const InventorySchema = new Schema(
       type: String,
       required: 'Kindly enter the description'
     },
-    ingredients: [{ type: String }],
-    tags: [{ type: String }],
+    ingredients: [{ type: String, required: true }],
+    tags: [{ type: String, requried: true }],
+
+    // users: [
+    //   {
+    //     name: { type: String, required: [true, 'Name is required'] },
+    //     age: { type: Number, required: [true, 'Age is required'] },
+    //     contact: { type: Number, required: [true, 'Contact is required'] }
+    //   }
+    // ],
+
     availability: {
       type: Boolean,
       default: true
@@ -30,7 +41,8 @@ const InventorySchema = new Schema(
       default: new Date()
     }
   },
-  { collection: 'inventory' }
+  { collection: 'inventory' },
+  { typeKey: '$type' }
 );
 
 module.exports = mongoose.model('Inventory', InventorySchema);
